--- a/Web2/index.html
+++ b/Web2/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Web2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web2.data.br",
-        frameworkUrl: buildUrl + "/Web2.framework.js.br",
-        codeUrl: buildUrl + "/Web2.wasm.br",
+        dataUrl: buildUrl + "/Web2.data",
+        frameworkUrl: buildUrl + "/Web2.framework.js",
+        codeUrl: buildUrl + "/Web2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "multiScenedemo",
